<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="110dp"
        android:text="@string/first_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="160dp"
        android:text="@string/second_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="200dp" />

    <Button
        android:id="@+id/achievements_button"
        android:layout_width="157dp"
        android:layout_height="35dp"
        android:layout_x="100dp"
        android:layout_y="50dp"
        android:text="@string/achievements"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="270dp" />

    <View
        android:layout_width="410dp"
        android:layout_height="61dp"
        android:background="#696969"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_x="10dp"
        android:layout_y="10dp"
        android:text="@string/user"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

