<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/sing_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="50dp"
        android:text="@string/sing_in"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="580dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="110dp"
        android:text="@string/login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="110dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_x="150dp"
        android:layout_y="100dp"
        android:width="100dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="130dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="160dp"
        android:text="@string/password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="170dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:width="100dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="190dp" />

    <View
        android:layout_width="410dp"
        android:layout_height="61dp"
        android:background="#696969"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_x="10dp"
        android:layout_y="10dp"
        android:text="@string/sing_in"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>