<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/go_1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="50dp"
        android:text="@string/go"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="119dp" />

    <Button
        android:id="@+id/go_2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="50dp"
        android:text="@string/go"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="209dp" />


    <Button
        android:id="@+id/go_3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="50dp"
        android:text="@string/go"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="295dp" />


    <Button
        android:id="@+id/go_4_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="50dp"
        android:text="@string/go"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/go_5_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="50dp"
        android:text="@string/go"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="483dp" />

    <Button
        android:id="@+id/go_6_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="100dp"
        android:layout_y="50dp"
        android:text="@string/go"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="567dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="110dp"
        android:text="@string/name_test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="110dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_x="150dp"
        android:layout_y="100dp"
        android:width="100dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="130dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="160dp"
        android:text="@string/name_test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="190dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:width="100dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="217dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="160dp"
        android:text="@string/name_test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="276dp" />


    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:width="100dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="304dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="160dp"
        android:text="@string/name_test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="356dp" />


    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:width="100dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="390dp" />

    <View
        android:layout_width="410dp"
        android:layout_height="61dp"
        android:background="#696969"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="160dp"
        android:text="@string/name_test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="450dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="160dp"
        android:text="@string/name_test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="541dp" />


    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:width="100dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="577dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:width="100dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="483dp" />

    <TextView
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_x="10dp"
        android:layout_y="10dp"
        android:text="@string/tests"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
